# rokit

./: .gitignore  .justfile  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yaml  release.yaml  release.yml
lib/: lib.rs  result.rs  util.rs
lib/description/: arch.rs  mod.rs  os.rs
lib/descriptor/: arch.rs  executable_parsing.rs  mod.rs  os.rs  toolchain.rs
lib/discovery/: aftman.rs  foreman.rs  mod.rs  rokit.rs
lib/manifests/: aftman.rs  auth.rs  discovery.rs  mod.rs  rokit.rs
lib/runner/: mod.rs
lib/sources/: artifact.rs  client.rs  decompression.rs  extraction.rs  github.rs  mod.rs  source.rs
lib/sources/artifact/: format.rs  mod.rs  provider.rs  sorting.rs  util.rs
lib/sources/github/: mod.rs  models.rs  result.rs
lib/storage/: home.rs  install_cache.rs  installed.rs  load_and_save.rs  metadata.rs  mod.rs  result.rs  tool_cache.rs  tool_storage.rs  trust.rs  trust_cache.rs  util.rs
lib/system/: arch.rs  current.rs  description.rs  info.rs  mod.rs  os.rs  runner.rs  toolchain.rs
lib/system/env/: env.sh  mod.rs  shell.rs  unix.rs  windows.rs
lib/system/process/: mod.rs  unix.rs  windows.rs
lib/tool/: alias.rs  id.rs  mod.rs  spec.rs  util.rs
lib/util/: fs.rs  mod.rs  path.rs  str.rs
scripts/: get-version.sh  install.ps1  install.sh  unpack-releases.sh  zip-release.sh
src/: auth.rs  config.rs  main.rs  manifest.rs  tool_storage.rs  trust.rs
src-new/: main.rs
src-new/cli/: mod.rs
src-new/tool/: alias.rs  mod.rs  util.rs
src-old/: main.rs  tool_storage.rs  trust.rs
src-old/cli/: mod.rs
src-old/system_path/: unix.rs
src-old/tool_source/: github.rs
src/cli/: add.rs  authenticate.rs  debug_system_info.rs  debug_trusted_tools.rs  get_system_info.rs  init.rs  install.rs  list.rs  mod.rs  remove.rs  self_install.rs  self_update.rs  system_info.rs  trust.rs  uninstall.rs  untrust.rs  update.rs
src/process/: unix.rs  windows.rs
src/runner/: info.rs  mod.rs
src/system_path/: mod.rs  unix.rs
src/tool_source/: github.rs
src/util/: alias_or_id.rs  alias_or_id_or_spec.rs  artifacts.rs  constants.rs  discovery.rs  id_or_spec.rs  mod.rs  progress.rs  prompts.rs  running.rs  sources.rs  tracing.rs
